--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Ming Chow's website
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://mchow01.github.io" # the base hostname & protocol for your site
-twitter_username: 0xmchow
+mastodon_username: 0xmchow
 github_username:  mchow01
 linkedin_username: mchow01
 
